@@ -1,4 +1,9 @@
 2003-06-17 Damien Sandras  <dsandras@seconix.com>
+
+	* src/config.cpp: Don't upgrade if the port is = 0. One less 
+	last minute bug...
+	
+2003-06-17 Damien Sandras  <dsandras@seconix.com>
 	                                                                               * src/ils.cpp: Fixed incorrect gconf key for the sport attribute.
 	
 2003-06-17 Damien Sandras  <dsandras@seconix.com>
